# rat

./: .gitattributes  .gitignore  Dockerfile  LICENSE  docker-compose.yaml  manage.py  pyproject.toml
core/: admin.py  apps.py  models.py
core/migrations/: 0001_initial.py  0002_initial.py
papers/: apps.py  fields.py  forms.py  signals.py  utils.py  validators.py
papers/admin/: papers.py  tags.py  utils.py
papers/migrations/: 0001_initial.py
papers/models/: __init__.py  papers.py  tags.py
papers/tests/: test_utils.py  test_validators.py
rat/: asgi.py  settings.py  urls.py  wsgi.py
