[project]
name = "rat"
version = "0.1.0"
description = "Repository of academic texts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dalf>=0.3.0",
    "django>=5.2.4",
    "django-debug-toolbar>=6.0.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-health-check>=3.20.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.2",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.7",
    "werkzeug>=3.1.3",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
ignore_missing_imports = false
strict = true

[tool.django-stubs]
django_settings_module = "rat.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rat.settings"